--- a/main.html
+++ b/main.html
@@ -451,14 +451,14 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="">
+      <div class="soon">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>krunker.io</h3>
           <p>Made by</p>
         </a>
       </div>		
-      <div class="">
+      <div class="soon">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>surviv.io</h3>
@@ -466,7 +466,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="">
+      <div class="soon">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>venge.io</h3>
@@ -474,7 +474,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>		
 		
-      <div class="">
+      <div class="soon">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>Moto X3M</h3>
@@ -482,7 +482,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="">
+      <div class="soon">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>chess</h3>
@@ -490,7 +490,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="">
+      <div class="soon">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>checkers</h3>
@@ -498,7 +498,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="">
+      <div class="soon">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>stickmanhook</h3>
@@ -506,7 +506,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>	
 		
-      <div class="">
+      <div class="soon">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>subway surfers</h3>
@@ -514,7 +514,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="">
+      <div class="soon">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>temple run</h3>
@@ -522,7 +522,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>	
 		
-      <div class="">
+      <div class="soon">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>drift-boss</h3>
@@ -530,7 +530,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="">
+      <div class="soon">
         <a href="library/lacey-flash-gaem/index.html" >
        <img src="library/lacey-flash-gaem/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>Lacey's Wardrobe</h3>
@@ -590,65 +590,53 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+      <div class="soon">
+        <a href="library/undertale/index.html" >
+       <img src="library/undertale/deltarune.png" onerror="this.src='git.gif';" class="contented" />
           <h3>Undertale</h3>
           <p>Made by Toby Fox</p>
         </a>
       </div>		
 		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+      <div class="soon">
+        <a href="library/deltarune/index.html" >
+       <img src="library/deltarune/undertale.png" onerror="this.src='git.gif';" class="contented" />
           <h3>Deltarune</h3>
           <p>Made by Toby Fox</p>
         </a>
       </div>
 		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+      <div class="soon">
+        <a href="library/undertale-yellow/index.html" >
+       <img src="library/undertale-yellow/yellow.jpeg" onerror="this.src='git.gif';" class="contented" />
           <h3>Undertale:Yellow</h3>
           <p>Fanmade version of undertale by Toby Fox</p>
         </a>
       </div>
 		
-      <div class="">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
+      <div class="soon">
+        <a href="library/fears-to-fathom/index.html" >
+       <img src="library/fears-to-fathom/fears.jpeg" onerror="this.src='git.gif';" class="contented" />
           <h3>Fears to fathom</h3>
           <p>Made by</p>
         </a>
       </div>
 		
-      <div class="">
+      <div class="soon">
         <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>kindergarden</h3>
+       <img src="library/kindergarten/kinder.png" onerror="this.src='git.gif';" class="contented" />
+          <h3>kindergarten</h3>
           <p>Made by</p>
         </a>
       </div>
 		<div class="">
         <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>yumi nikki</h3>
+       <img src="library/yume-nikke/yume.gif" onerror="this.src='git.gif';" class="contented" />
+          <h3>yume nikki</h3>
           <p>Made by</p>
         </a>
       </div>		
 		<!-- 60 Game Mark -->
-		
-		<!-- COPY AND EDIT!
-		
-	  <div id="content" class="contented">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='replace.png';" class="contented" />
-          <h3>Blumgi</h3>
-          <p>Made by</p>
-        </a>
-      </div>
-		
-      -->
       
     </div>
 		</main>
