--- a/main.html
+++ b/main.html
@@ -381,7 +381,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
 		
 		<div class="soon">  
         <a href="library/btd3/index.html" >
-       <img src="library/btd3/btd3.PNG" onerror="this.src='git.gif';" class="contented" />
+       <img src="library/btd3/btd3.jpeg" onerror="this.src='git.gif';" class="contented" />
           <h3>Bloon Tower Defense 3</h3>
           <p>Developed by Ninja Kiwi</p>
         </a>
