--- a/main.html
+++ b/main.html
@@ -631,7 +631,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
       </div>
 		<div class="">
         <a href="library/directory/index.html" >
-       <img src="library/yume-nikke/yume.gif" onerror="this.src='git.gif';" class="contented" />
+       <img src="library/yume-nikki/yume.gif" onerror="this.src='git.gif';" class="contented" />
           <h3>yume nikki</h3>
           <p>Made by</p>
         </a>
