--- a/main.html
+++ b/main.html
@@ -629,7 +629,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
           <p>Made by</p>
         </a>
       </div>
-		<div class="">
+		<div class="soon">
         <a href="library/directory/index.html" >
        <img src="library/yume-nikki/yume.gif" onerror="this.src='git.gif';" class="contented" />
           <h3>yume nikki</h3>
