--- a/main.html
+++ b/main.html
@@ -531,8 +531,8 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
       </div>
 		
       <div class="soon">
-        <a href="library/lacey-flash-gaem/index.html" >
-       <img src="library/lacey-flash-gaem/image.png" onerror="this.src='git.gif';" class="contented" />
+        <a href="library/laceys-wardrobe/index.html" >
+       <img src="library/laceys-wardrobe/lacey.jpeg" onerror="this.src='git.gif';" class="contented" />
           <h3>Lacey's Wardrobe</h3>
           <p>Made by Grace Asop & Roso Yani</p>
         </a>
