--- a/main.html
+++ b/main.html
@@ -364,8 +364,8 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
       </div>
 
       <div class="ok">
-        <a href="library/btd/index.html" >
-       <img src="library/btd/btd.jpg" onerror="this.src='git.gif';" class="contented" />
+        <a href="library/btd1/index.html" >
+       <img src="library/btd1/btd.jpg" onerror="this.src='git.gif';" class="contented" />
           <h3>Bloon Tower Defense </h3>
           <p>Developed by Ninja Kiwi</p>
         </a>
