--- a/main.html
+++ b/main.html
@@ -635,10 +635,10 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
 
 <!-- Fixed Dashboard Menu -->
 <div id="dashboardMenu" class="dashboard-menu">
-  <a href="pages.html">📂 Pages</a>
-  <a href="settings.html">⚙ Settings</a>
-  <a href="info.html">ℹ Info</a>
-  <a href="support.html">💬 Support</a>
+  <a href="pages.html">Music</a>
+  <a href="settings.html">Themes</a>
+  <a href="info.html">Credits</a>
+  <a href="support.html">Alternative Links</a>
 </div>
 
 
