--- a/main.html
+++ b/main.html
@@ -433,14 +433,14 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="soon">
+      <div class="FIX">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>krunker.io</h3>
           <p>Made by</p>
         </a>
       </div>		
-      <div class="soon">
+      <div class="FIX">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>surviv.io</h3>
@@ -448,15 +448,15 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="soon">
+      <div class="FIX">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>venge.io</h3>
+          <h3>Venge.io</h3>
           <p>Made by</p>
         </a>
       </div>		
 		
-      <div class="soon">
+      <div class="ok">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>Moto X3M</h3>
@@ -464,31 +464,31 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="soon">
+      <div class="ok">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>chess</h3>
+          <h3>Chess</h3>
           <p>Made by</p>
         </a>
       </div>
 		
-      <div class="soon">
+      <div class="ok">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>checkers</h3>
+          <h3>Checkers</h3>
           <p>Made by</p>
         </a>
       </div>
 		
-      <div class="soon">
+      <div class="ok">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>stickmanhook</h3>
+          <h3>Stickman hook</h3>
           <p>Made by</p>
         </a>
       </div>	
 		
-      <div class="soon">
+      <div class="ok">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>subway surfers</h3>
@@ -496,7 +496,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="soon">
+      <div class="ok">
         <a href="library/directory/index.html" >
        <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>temple run</h3>
@@ -504,10 +504,10 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>	
 		
-      <div class="soon">
-        <a href="library/directory/index.html" >
-       <img src="library/directory/image.png" onerror="this.src='git.gif';" class="contented" />
-          <h3>drift-boss</h3>
+      <div class="ok">
+        <a href="library/drift-boss/index.html" >
+       <img src="library/drift-boss/drift.png" onerror="this.src='git.gif';" class="contented" />
+          <h3>Drift Boss</h3>
           <p>Made by</p>
         </a>
       </div>
