--- a/main.html
+++ b/main.html
@@ -377,7 +377,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="soon">
+      <div class="FIX">
         <a href="library/btd5/index.html" >
        <img src="library/btd5/image.png" onerror="this.src='git.gif';" class="contented" />
           <h3>Bloon Tower Defense 5</h3>
@@ -394,9 +394,9 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
       </div>	
 		
       <div class="ok">
-        <a href="library/cookieclicker/index.html" >
-       <img src="library/cookieclicker/cookie.jpeg" onerror="this.src='git.gif';" class="contented" />
-          <h3>cookie clicker</h3>
+        <a href="library/cookie-clicker/index.html" >
+       <img src="library/cookie-clicker/cookie.jpeg" onerror="this.src='git.gif';" class="contented" />
+          <h3>Cookie Clicker</h3>
           <p>Made by</p>
         </a>
       </div>
@@ -417,7 +417,7 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
         </a>
       </div>
 		
-      <div class="soon">
+      <div class="FIX">
         <a href="library/osu/index.html" >
        <img src="library/osu/osu.png" onerror="this.src='git.gif';" class="contented" />
           <h3>OSU!</h3>
@@ -426,8 +426,8 @@ document.getElementById("searchBtnHeader").addEventListener("click", function() 
       </div>
 		
       <div class="ok">
-        <a href="library/pacman/index.html" >
-       <img src="library/pacman/pacman.png" onerror="this.src='git.gif';" class="contented" />
+        <a href="library/pac-man/index.html" >
+       <img src="library/pac-man/pacman.png" onerror="this.src='git.gif';" class="contented" />
           <h3>pacman</h3>
           <p>Made by google </p>
         </a>
